add basic HTML structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>hello, world</h1>
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<h1>hello, world</h1>
+	<p>mondays suck</p>
+</body>
+</html>
