--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Very Hungry...</title>
-</head>
-<body>
-	<h1>hello, world</h1>
-	<p>mondays suck</p>
-</body>
-</html>
+hello, world
