--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My head hurts...</title>
+	<title>A Whale of a Greeting</title>
 </head>
 <body>
 	<h1>hello, world</h1>
-	<p>mondays suck</p>
+	<p>Call me Ismael</p>
 </body>
 </html>	
 
